Save uncommited changes (WIP)

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "license": "MIT",
   "scripts": {
     "dev": "parcel src/*.html",
-    "dev:share": "parcel watch src/*.html --no-hmr --public-url ./ & npm run browsersync",
+    "dev:share": "parcel watch src/*.html --public-url ./ & npm run browsersync",
     "prebuild": "rm -rf dist",
-    "build": "parcel build src/*.html",
+    "build": "parcel build src/*.html --public-url ./",
     "browsersync": "node browsersync.js",
     "deploy": "./deploy.sh"
   },
